syntax = "proto3";

option java_outer_classname = "HelloWorldProto";
option java_package = "grpc.gen";
option java_multiple_files = true;


service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}